Port

Bug #245044 --> Folder unread count keeps reverting